# PetNES

./: .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
public/: apu-worklet.js  wizard.nes
public/wasm/: petnes-core.wasm
src/: bindings.cpp  crt.ts  lib.ts  main.ts  nes-wasm.ts
src/core/: apu.cpp  apu.hpp  bus.cpp  bus.hpp  cartridge.cpp  cartridge.hpp  controller.cpp  controller.hpp  cpu.cpp  cpu.hpp  mapper.cpp  mapper.hpp  nes.cpp  nes.hpp  ppu.cpp  ppu.hpp
test/: nestest_runner.cpp
wasm-out/: petnes-core.js
